Attempt 2 to fix overflow

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
     color: #DEDBD2;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
   
 body {
@@ -15,9 +14,9 @@ body {
     background-color: #041416;
 }
 
-/* html, body {
+html, body {
     overflow-x: hidden;
-} */
+}
 
 
 
